--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js $WHEELTYPE" 
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
